--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap core CSS -->
-     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
-</head>
-<body>
+{% extends "login_layout.html" %}
+{% block content %}
 
 <div class="wrapper fadeInDown">
   <div id="formContent">
@@ -37,8 +28,4 @@
   {% endif %}
 {% endwith %}
 
-</body>
-
-
-
-</html>
+{% endblock %}
