--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <br>
 
     <!-- Login Form -->
-    <form class="button" action="/logout" method="get">
+    <form class="button" action="/logout" method="GET">
       <input type="submit" class="fadeIn fourth" value="Logout">
     </form>
 
