--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,37 @@
 {% extends "login_layout.html" %}
 {% block content %}
-<h1>
-<font size="2"><p><strong></strong> {{ msg }}</font>
-</h1>
+  
+   <h2>COMPANY:</h2>
+  <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
+  <form class="button" action="/home" method="POST">
+  {% if msg %}
+    <font size="2"><p><strong></strong> {{ msg }}</font>
+  {% endif %}
+    <input name="company">
+    <input class= "mybutton" type="submit" value= "Submit">
+  </form>
+  <form class="button" action="/files" method="POST">
+    <button class="mybutton" type="submit">Files to Upload</button>
+  </form>  
+
+    
+  <div class="multi_upload_index">
+  <h2>Instructions for the upload templates -  <b>CI's</b> and/or <b>Sites</b>:</h2>
+      <a href = "/return-file/" target ="blank"><button class="mybutton2">Download Templates</button></a>
+  <hr/>
+    <ul>  
+      <li><p> During onboarding/deployment the Sites or CI data has to be analyzed and defined in the CMDB data model first;</li>
+      <li><p> Based on the CMDB data model, the Sites or CI information can be prepared for bulk upload in these templates</li>
+      <li><p> The fields marked green are mandatory; in some cases upload in ITSM will fail when these fields are left blank; in other cases it will impact ticket creation afterwards.</li>
+      <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
+    </ul>
+  </div>
 <br>
 
     <!-- Login Form -->
     <form class="button" action="/logout" method="GET">
-      <input type="submit" class="fadeIn fourth" value="Logout">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
     </form>
 
 
