--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <form class="button" method="post">
       <input type="text" id="username" class="fadeIn second" name="username" placeholder="login">
       <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
-      <input type="submit" class="fadeIn fourth" value="Log In">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
   </div>
