--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -74,4 +74,8 @@
     </ul>
   </ul>
 </div>
+<!-- Login Form -->
+    <form class="button" action="/logout" method="GET">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
+    </form>
 {% endblock %}
