--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -4,9 +4,9 @@
  <h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
-  <form class="button" action="/home" method="POST">
-  {% if msg %}
-    <font size="2"><p><strong></strong> {{ msg }}</font>
+  <form class="button" method="POST">
+  {% if msg2 %}
+    <font size="2"><p><strong></strong> {{ msg2 }}</font>
   {% endif %}
     <input name="company">
     <input class= "mybutton" type="submit" value= "Submit">
