--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "login_layout.html" %}
 {% block content %}
-  
+  <h1>
+Hello, <b>{{ current_user.username }}</b>!!
+</h1>
   
   <form class="button" action="/files" method="POST">
     <button class="mybutton" type="submit">Files to Upload</button>
@@ -18,6 +20,7 @@
       <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
     </ul>
   </div>
+
 <br>
 
     <!-- Login Form -->
