--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -1,6 +1,8 @@
 {% extends "login_layout.html" %}
 {% block content %}
-
+<h1>
+Hello, <b>{{ current_user.username }}</b>!!
+</h1>
   <!--<h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
