--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,16 @@
   <h1>
 Hello, <b>{{ current_user.username }}</b>!!
 </h1>
-  
+  <h2>COMPANY:</h2>
+  <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
+
+  <form class="button" action="/home" method="POST">
+  {% if msg %}
+    <font size="2"><p><strong></strong> {{ msg }}</font>
+  {% endif %}
+    <input name="company">
+    <input class= "mybutton" type="submit" value= "Submit">
+  </form>
   <form class="button" action="/files" method="POST">
     <button class="mybutton" type="submit">Files to Upload</button>
   </form>  
