--- a/templates/refresh.html
+++ b/templates/refresh.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "login_layout.html" %}
 {% block content %}
 <div class="multi_upload_index">
   <h2>Click "Home" to get back to home page!</h2>
