--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -47,5 +47,8 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
     crossorigin="anonymous">
 </script>
-  
+   <!-- Login Form -->
+    <form class="button" action="/logout" method="GET">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
+    </form>
 </html>
