--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -18,7 +18,7 @@
     <div class="container">
     <h3 class=title><b>DATA VALIDATION</b></h3>
     <div align="center">
-      <form action="/refresh/" method="post">
+      <form action="/home" method="post">
         <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
       </form>
     </div>
