--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,9 @@ Hello, <b>{{ current_user.username }}</b>!!
       <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
     </ul>
   </div>
-
+<!-- Login Form -->
+    <form class="button" action="/logout" method="GET">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
+    </form>
 
 {% endblock %}
