--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -12,4 +12,8 @@
 			</ul>
 		<h2 class="text-muted">REPORT OVERVIEW:</h2>
 	</div>
+<!-- Login Form -->
+    <form class="button" action="/logout" method="GET">
+      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
+    </form>
  {% endblock %}  
