--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -11,6 +11,10 @@
 				{% endfor %}
 			</ul>
 		<h2 class="text-muted">REPORT OVERVIEW:</h2>
+		<hr/>    
+		<pre>
+			{{ text }}
+		</pre>
 	</div>
 <!-- Login Form -->
     <form class="button" action="/logout" method="GET">
