--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -3,17 +3,12 @@
 <h1>
 Hello, <b>{{ current_user.username }}</b>!!
 </h1>
-  <!--<h2>COMPANY:</h2>
-  <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
+ <div align="center">
+      <form action="/home" method="post">
+        <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
+      </form>
+ </div>
 
- <form class="button" method="POST">
-  {% if msg2 %}
-    <font size="2"><p><strong></strong> {{ msg2 }}</font>
-  {% endif %}
-    <input name="company">
-    <input class= "mybutton" type="submit" value= "Submit">
-  </form>
--->
   <h2>Upload existing Sites in CMDB:</h2>
   <form class="button" method=post enctype=multipart/form-data>
     <table>
