--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -11,7 +11,7 @@
         <h1 class="logo">Nokia</h1>
         <strong><nav>
           <ul class="menu">
-            <li><a href="{{ url_for('login_get') }}"><h1>HOME</h1></a></li>
+            <li><a href="{{ url_for('home') }}"><h1>HOME</h1></a></li>
           </ul>
         </nav></strong>
     </header>
