--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,12 @@
 {% extends "login_layout.html" %}
 {% block content %}
-  <h1>
+ <!-- Login Form -->
+<div align="right">
+    <form action="/logout" method="GET">
+        <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
+    </form>
+</div>
+<h1>
 Hello, <b>{{ current_user.username }}</b>!!
 </h1>
   <h2>COMPANY:</h2>
@@ -29,9 +35,6 @@ Hello, <b>{{ current_user.username }}</b>!!
       <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
     </ul>
   </div>
-<!-- Login Form -->
-    <form class="button" action="/logout" method="GET">
-      <input class="mybutton" type="submit" class="fadeIn fourth" value="Logout">
-    </form>
+
 
 {% endblock %}
