--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     </form>
 </div>
 <h1>
-Hello, <b>{{ current_user.username }}</b>!!
+Hello, <b>{{ current_user.name }}</b>!!
 </h1>
   <h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
