--- a/templates/login.html
+++ b/templates/login.html
@@ -27,6 +27,11 @@
   </div>
   {% endif %}
 {% endwith %}
-
+ <div class="image_dim">
+      <!-- image -->
+    <center>
+      <img src='/static/images/NOKIA-Logo-Blue.jpg' style="width: auto; height: auto;max-width: 300px;max-height: 300px">
+    </center>
+  </div>
 
 {% endblock %}
