--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -6,8 +6,11 @@
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-<h1>
-Hello, <b>{{ current_user.username }}</b>!!
+ <div align="center">
+      <form action="/" method="post">
+        <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
+      </form>
+    </div>
  
   <h2>Upload existing Sites in CMDB:</h2>
   <form class="button" method=post enctype=multipart/form-data>
