--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -7,7 +7,7 @@
     </form>
 </div>
  <div align="center">
-      <form action="/refresh/" method="post">
+      <form action="/home" method="post">
         <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
       </form>
     </div>
