--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -17,7 +17,7 @@
     </header>
     <div class="container">
     <h3 class=title><b>DATA VALIDATION</b></h3>
-    div align="center">
+    <div align="center">
       <form action="/refresh/" method="post">
         <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
       </form>
