--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,15 @@
 {% extends "login_layout.html" %}
 {% block content %}
+
+<h1>
+Hello, <b>{{ current_user.username }}</b>
+</h1>
  <!-- Login Form -->
 <div align="right">
     <form action="/logout" method="GET">
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-<h1>
-Hello, <b>{{ current_user.username }}</b>!!
-</h1>
   <h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
