--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -15,8 +15,8 @@
 					<li><a href="{{url_for('uploaded_file', filename=file)}}">{{file}}</a></li>
 				{% endfor %}
 			</ul>
-		<h2 class="text-muted">REPORT OVERVIEW:</h2>
-		<hr/>    
+		<hr/>
+		<h2 class="text-muted">DATA SUMMARY AND ISSUES FOUND:</h2>
 		<pre>
 			{{ text }}
 		</pre>
