--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -6,6 +6,7 @@
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
+<p class="big"></p>
 	<div class="multi_upload_index">
 		<h2 class="text-muted">UPLOADED FILES:</h2>
 
