--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -8,7 +8,7 @@
   {% if msg %}
     <font size="2"><p><strong></strong> {{ msg }}</font>
   {% endif %}
-    <input name="company">
+    <input name="company_noam">
     <input class= "mybutton" type="submit" value= "Submit">
   </form>
   
