--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -1,6 +1,11 @@
 {% extends "login_layout.html" %}
 {% block content %}
-
+<!-- Login Form -->
+<div align="right">
+    <form action="/logout" method="GET">
+        <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
+    </form>
+</div>
   <h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
