--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -7,7 +7,7 @@
     </form>
 </div>
   <h2>COMPANY:</h2>
-  <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
+  <font size="1"><h2>(Choose the related company/project, then select the file and 'Submit' to convert it to NOAM templates.)</h2></font>
 
   <form class="button" action="noam" method="POST">
   {% if msg %}
@@ -31,11 +31,4 @@
     <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
     </tr>
     </table>
-
-  <!--<div class="image_dim">
-      
-    <center>
-      <img src='/static/images/NOKIA-Logo-Blue.jpg' style="width: auto; height: auto;max-width: 200px;max-height: 200px">
-    </center>
-  </div>-->
 {% endblock %}
