--- a/templates/noam_files_upload.html
+++ b/templates/noam_files_upload.html
@@ -6,16 +6,15 @@
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
+<p class="big"></p>
 	<div class="multi_upload_index">
 		<h2 class="text-muted">NOAM FILES:</h2>
 
-			<p>Below the overview report (issues.txt) and the screened file with data to upload and detailed issues (report.xlsx): .</p>
+			<p>Below the file with data to upload in NOAM template format: .</p>
 			<ul>
 				{% for file in noam_filenames %}
 					<li><a href="{{url_for('uploaded_NOAM_file', filename=file)}}">{{file}}</a></li>
 				{% endfor %}
 			</ul>
-		<h2 class="text-muted">REPORT OVERVIEW:</h2>
-		<hr/>    
 	</div>
  {% endblock %}  
