--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -7,6 +7,7 @@
     </form>
 </div>
 <p class="big"></p>
+<p class="big"></p>
 	<div class="multi_upload_index">
 		<h2 class="text-muted">UPLOADED FILES:</h2>
 
