--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -17,6 +17,11 @@
     </header>
     <div class="container">
     <h3 class=title><b>DATA VALIDATION</b></h3>
+      <div align="center">
+      <form action="/noam/" method="post">
+        <button class="mybutton2" name="forwardBtn" type="submit">NOAM</button>
+      </form>
+    </div>
       {% block content %}
       {% endblock %}
     </div>
