--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@ Hello, <b>{{ current_user.username}}</b>
     </ul>
   </div>
  <div align="center">
-      <form action="/noam" method="post">
+      <form action="/noam" method="GET">
         <button class="mybutton2" name="forwardBtn" type="submit">NOAM</button>
       </form>
     </div>
