--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -6,9 +6,9 @@
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-<div align="center">
+<div align="left">
       <form action="/home" method="GET">
-        <button class="mybutton2" name="forwardBtn" type="submit">CLEAN DATA</button>
+        <button class="mybutton" name="forwardBtn" type="submit">HOME</button>
       </form>
   </div>
   <h2>Upload existing Sites in CMDB:</h2>
