--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -7,10 +7,10 @@
     </form>
 </div>
 <div align="left">
-      <form action="/home" method="GET">
-        <button class="mybutton" name="forwardBtn" type="submit">HOME</button>
+      <form action="/noam" method="GET">
+        <button class="mybutton" name="forwardBtn" type="submit">NOAM</button>
       </form>
-  </div>
+</div>
   <h2>Upload existing Sites in CMDB:</h2>
   <form class="button" method=post enctype=multipart/form-data>
     <table>
