--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@ Hello, <b>{{ current_user.username}}</b>
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-<div align="left">
+<div align="right">
       <form action="/noam" method="GET">
         <button class="mybutton" name="forwardBtn" type="submit">NOAM</button>
       </form>
