--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -6,7 +6,7 @@
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-<div align="left">
+<div align="right">
       <form action="/noam" method="GET">
         <button class="mybutton" name="forwardBtn" type="submit">NOAM</button>
       </form>
