--- a/templates/home.html
+++ b/templates/home.html
@@ -36,6 +36,7 @@ Hello, <b>{{ current_user.username}}</b>
       <li><p> The fields, white/unmarked, must be filled based on the rules of the CMDB data model. When blank, the rules may vary per project.</li>
     </ul>
   </div>
+<p>&nbsp;</p>
 <div align="right">
       <form action="/noam" method="GET">
         <button class="mybutton" name="forwardBtn" type="submit">NOAM only</button>
