--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -19,7 +19,7 @@
   
   <h2>NOAM templates:</h2>
   
-  <form class="button" align="right" method="post" action="/noam_upload" enctype="multipart/form-data">
+<form class="button" align="right" method="post" action="/noam_upload" enctype="multipart/form-data">
     <table>
     <tr>
       <td><label id="#bb"> Select Files
@@ -31,4 +31,5 @@
     <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
     </tr>
     </table>
+</form>
 {% endblock %}
