--- a/templates/login.html
+++ b/templates/login.html
@@ -16,11 +16,11 @@
 -->
 <div class="wrapper fadeInDown">
   <div id="formContent">     
-    <form method="post">
-      <label style="background-color:white" for="username">Username:</label>
-      <input type="text" id="username" name="username">
-      <label style="background-color:white" for="password">Password:</label>
-      <input type="password" id="password" name="password">
+    <form method="post">Please Enter your credentials:
+      <label style="background-color:white"></label>
+      <input type="text" id="username" name="username" placeholder="username">
+      <label style="background-color:white"></label>
+      <input type="password" id="password" name="password"placeholder="Password">
       <input class="mybutton" type="submit" value="Login">
   </form>
   </div>
