--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,8 @@ Hello, <b>{{ current_user.username}}</b>
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
-  <h2>COMPANY:</h2>
+
+<h2>COMPANY:</h2>
   <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
 
   <form class="button" action="/home" method="POST">
@@ -21,8 +22,11 @@ Hello, <b>{{ current_user.username}}</b>
     <input class= "mybutton" type="submit" value= "Submit">
   </form>
   <form class="button" action="/files" method="POST">
-    <button class="mybutton" type="submit">Files to Upload</button>
-  </form>  
+    <button class="mybutton" type="submit">CMDB Validation</button>
+  </form>
+   <form class="button" action="/noam_data" method="GET">
+      <button class="mybutton" name="forwardBtn" type="submit">NOAM templates converter</button>
+  </form>
 
     
   <div class="multi_upload_index">
