--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -16,6 +16,11 @@
         </nav></strong>
     </header>
     <div class="container">
+       <div align="right">
+       <form action="/logout" method="GET">
+          <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
+       </form>
+       </div>
     <h3 class=title><b>DATA VALIDATION</b></h3>
       {% block content %}
       {% endblock %}
