--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -40,13 +40,10 @@
     </table>
   </form>
 
-
-  <h2>Validate CIs/Sites:</h2>
-
   <form class="button" align="right" method="post" action="upload" enctype="multipart/form-data">
     <table>
     <tr>
-    <input class="mybutton" type="submit" value="Submit"  class="span2"></td>
+    <input class="mybutton" type="submit" value="RUN Validation"  class="span2"></td>
     </tr>
     </table>
    
