--- a/templates/multi_upload_index.html
+++ b/templates/multi_upload_index.html
@@ -40,7 +40,7 @@
     </table>
   </form>
 
-  <form class="button" align="right" method="post" action="upload" enctype="multipart/form-data">
+  <form class="button" align="center" method="post" action="upload" enctype="multipart/form-data">
     <table>
     <tr>
     <input class="mybutton" type="submit" value="RUN Validation"  class="span2"></td>
