--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@ Hello, <b>{{ current_user.username}}</b>
 </div>
 -->
 <h2>COMPANY:</h2>
-  <font size="1"><h2>(Choose the related company/project, then click on 'FILES TO UPLOAD' button.)</h2></font>
+  <font size="1"><h2>(Submit the related company and then select the desired aciton, CMDB Validation or NOAM templates conversion.)</h2></font>
 
   <form class="button" action="/home" method="POST">
   {% if msg %}
