--- a/templates/index_NOAM_company.html
+++ b/templates/index_NOAM_company.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- Login Form -->
   
-<h2>CONVERT CMDB TEMPLATES TO NOAM TEMPLATES:</h2>
+<h2>CONVERT CMDB TEMPLATES IN NOAM TEMPLATES:</h2>
 <form class="button" align="right" method="post" action="noam_data" enctype="multipart/form-data">
     <table>
     <tr>
