--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,9 @@ Hello, <b>{{ current_user.username}}</b>
         <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
     </form>
 </div>
--->
-<h2>COMPANY:</h2>
-  <font size="1"><h2>(Submit the related company and then select the desired aciton, CMDB Validation or NOAM templates conversion.)</h2></font>
+
+<h2>COMPANY:</h2>-->
+  <font size="2"><h2>Type and submit the related company in the box bellow and then select the desired action, CMDB Validation or NOAM templates conversion.</h2></font>
 
   <form class="button" action="/home" method="POST">
   {% if msg %}
