--- a/templates/login_layout.html
+++ b/templates/login_layout.html
@@ -21,7 +21,7 @@
           <button class="mybutton" class="fadeIn fourth" type="submit" value="Logout">Logout</button>
        </form>
        </div>
-    <h3 class=title><b>DATA VALIDATION</b></h3>
+    <h3 class=title><b>Data validation for OneITSM configuration data</b></h3>
       {% block content %}
       {% endblock %}
     </div>
