--- a/templates/cmdb_validation.html
+++ b/templates/cmdb_validation.html
@@ -2,7 +2,7 @@
 {% block content %}
  <!-- Login Form -->
 <form class="button" align="right"action="/get_priorities" method="GET">
-      <button class="mybutton" name="forwardBtn" type="submit">UPDATE Priorites</button>
+      <button class="mybutton" name="forwardBtn" type="submit">VIP Sites</button>
 </form>
 <form class="button" align="right"action="/files" method="GET">
       <button class="mybutton" name="forwardBtn" type="submit">CIS/Sites validation</button>
