--- a/templates/priority_index.html
+++ b/templates/priority_index.html
@@ -1,6 +1,6 @@
  {% extends "login_layout.html" %}
 {% block content %}
- <h2>Update Priority:</h2>
+ <h2>VIP SIIES:</h2>
 
   <form class="button" align="left" method="post" action="get_priorities" enctype="multipart/form-data">
     <table>
