--- a/templates/home.html
+++ b/templates/home.html
@@ -21,13 +21,14 @@ Hello, <b>{{ current_user.username}}</b>
     <input name="company">
     <input class= "mybutton" type="submit" value= "Submit">
   </form>
-  <!--<form class="button" action="/files" method="POST">
+  <form class="button" action="/files" method="POST">
+    <button class="mybutton" type="submit">CMDB Validation</button>
+  </form>
+  
+  <!--<form class="button" action="/cmdb" method="POST">
     <button class="mybutton" type="submit">CMDB Validation</button>
   </form>
   -->
-  <form class="button" action="/cmdb" method="POST">
-    <button class="mybutton" type="submit">CMDB Validation</button>
-  </form>
    <form class="button" action="/noam_data" method="GET">
       <button class="mybutton" name="forwardBtn" type="submit">NOAM templates converter</button>
   </form>
