--- a/templates/noam_files_upload.html
+++ b/templates/noam_files_upload.html
@@ -1,45 +1,14 @@
 {% extends "login_layout.html" %}
 {% block content %}
- <!-- Login Form -->
 
-<p class="big"></p>
-<p class="big"></p>
-	<div class="multi_upload_index">
-		<h2 class="text-muted">UPLOADED FILES:</h2>
+<div class="multi_upload_index">
+	<h2 class="text-muted">NOAM FILES:</h2>
 
-			<p>Below screened file with data to upload and detailed issues (...report.xlsx): .</p>
-			<ul>
-				{% for file in filenames %}
-					<li><a href="{{url_for('uploaded_file', filename=file)}}">{{file}}</a></li>
-				{% endfor %}
-			</ul>
-		<hr/>
-		<h2 style="color:red;" class="text-muted">ERRORS:</h2>
-			<h2 style="color:green;">
-			<pre>
-				{{ text_correct }}
-			</pre>
-		</h2>
-		<h2 style="color:red;">
-			<pre>
-				{{ text_errors_report }}
-			</pre>
-		</h2>
-			<pre>
-				{{ text_errors }}
-			</pre>
-		
-
-		<h2 style="color:orange;" class="text-muted">Warnings:</h2>
-			<pre>
-				{{ text_warnings }}
-			</pre>
-		
-		<h2 style="color:black;" class="text-muted">Summary</h2>
-			<pre>
-				{{ text_summary}}
-			</pre>
-
-	</div>
- {% endblock %}  
-
+		<p>Below the file with data to upload in NOAM template format: .</p>
+		<ul>
+			{% for file in noam_filenames %}
+				<li><a href="{{url_for('uploaded_NOAM_file', filename=file)}}">{{file}}</a></li>
+			{% endfor %}
+		</ul>
+</div>
+{% endblock %}  
