--- a/templates/multi_files_upload.html
+++ b/templates/multi_files_upload.html
@@ -14,7 +14,9 @@
 				{% endfor %}
 			</ul>
 		<hr/>
-
+		{% if msgCIs %}
+			<u><h2 style="color:black;" class="text-muted">{{ msgCIs }}</h2></u>
+		{% endif %}
 		{% if msg %}
 			<h2 style="color:red;" class="text-muted">{{ msg }}</h2>
 		{% endif %}
@@ -28,6 +30,35 @@
 			<pre>
 				{{ text_errors_Cis }}
 			</pre>
+
+
+		{% if msg7 %}
+			<h2 style="color:orange;" class="text-muted">{{ msg7 }}</h2>
+		{% endif %}
+		{% if msg8 %}
+			<h2 style="color:green;" class="text-muted">{{ msg8 }}</h2>
+		{% endif %}
+		{% if msg9 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg9 }}</h2>
+		{% endif %}
+			<pre>
+				{{ text_warnings_Cis }}
+			</pre>
+
+
+		{% if msg15 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg15 }}</h2>
+		{% endif %}
+		{% if msg16 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg16 }}</h2>
+		{% endif %}
+			<pre>
+				{{ text_summary_Cis }}
+			</pre>
+<hr/>
+		{% if msgSites %}
+			<u><h2 style="color:black;" class="text-muted">{{ msgSites }}</h2></u>
+		{% endif %}
 		{% if msg4 %}
 			<h2 style="color:red;" class="text-muted">{{ msg4 }}</h2>
 		{% endif %}
@@ -40,16 +71,29 @@
 			<pre>
 				{{ text_errors_Sites }}
 			</pre>
-			
 
-		<h2 style="color:orange;" class="text-muted">Warnings:</h2>
+		{% if msg10 %}
+			<h2 style="color:orange;" class="text-muted">{{ msg10 }}</h2>
+		{% endif %}
+		{% if msg11 %}
+			<h2 style="color:green;" class="text-muted">{{ msg11 }}</h2>
+		{% endif %}
+		{% if msg12 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg12 }}</h2>
+		{% endif %}
 			<pre>
-				{{ text_warnings }}
+				{{ text_warnings_Sites }}
 			</pre>
-		
-		<h2 style="color:black;" class="text-muted">Summary</h2>
+
+
+		{% if msg13 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg13 }}</h2>
+		{% endif %}
+		{% if msg14 %}
+			<h2 style="color:blue;" class="text-muted">{{ msg14 }}</h2>
+		{% endif %}
 			<pre>
-				{{ text_summary}}
+				{{ text_summary_Sites }}
 			</pre>
 
 	</div>
